tests/tests/neg/error_messages/wf/invalid_prim_app00.rs
use flux_rs::attrs::*;

#[spec(fn () ensures [<<](1, 2))] //~ ERROR expression not allowed in this position
pub fn test() {}
